Update jquery theme and use awesome iconset

--- a/theme.yml
+++ b/theme.yml
@@ -1,4 +1,4 @@
 name: "ESCAMBO"
 layout: "escambo"
-jquery_theme: "smoothness_mod"
-icon_theme: [default, pidgin]
+jquery_theme: "smoothness"
+icon_theme: [awesome, pidgin]
